AP-6 refatoração de espaçamentos no container da mensagem mais atual

--- a/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
+++ b/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
@@ -28,6 +28,7 @@
     grid-area: lastAnswer;
     display: flex;
     flex-direction: column;
+    margin: 20px 0px;
 
   }
 
@@ -62,26 +63,28 @@
   <div class="info">
     <span class="mat-body-2 creation-date">{{contactItem.creationDate | date: 'dd/MM/yyyy - HH:mm'}}</span>
     <mat-chip-list aria-label="more info" class="more-info">
-      <!--      <a routerLink="{{contactItem.id}}/messages"><mat-chip>ver +</mat-chip></a>-->
       <mat-chip (click)="goToMessages(contactItem)">ver +</mat-chip>
     </mat-chip-list>
   </div>
   <span class="mat-h4 main-message">{{contactItem.message}}
-    <mat-divider></mat-divider>
+
   </span>
+  <div>
+    <mat-divider></mat-divider>
+    <div class="last-answer-spinner" *ngIf="loadingLastMessage">
+      <span class="mat-card-subtitle">aguardando dados da internet...</span>
+      <mat-spinner></mat-spinner>
+    </div>
 
-  <div class="last-answer-spinner" *ngIf="loadingLastMessage">
-    <span class="mat-card-subtitle">aguardando dados da internet...</span>
-    <mat-spinner></mat-spinner>
-  </div>
-
-  <div class="last-answer" *ngIf="!loadingLastMessage">
+    <div class="last-answer" *ngIf="!loadingLastMessage">
     <span class="mat-card-subtitle">Última mensagem |
-    {{contactItem.messages[0].creationDate | date:'dd/MM/yyyy - HH:mm' }} |
-    {{contactItem.messages[0].sender}}
+      {{contactItem.messages[0].creationDate | date:'dd/MM/yyyy - HH:mm' }} |
+      {{contactItem.messages[0].sender}}
     </span>
-    <span class="mat-body-2">{{contactItem.messages[0].text}}</span>
+      <span class="mat-body-2">{{contactItem.messages[0].text}}</span>
+    </div>
   </div>
+
 
   <div class="mat-body-2 answer">
     <span class="answer-btn">
