AP-6 texto justificado para todas mensagens

--- a/source/web/app/components/project-contact/messages/messages.component.html
+++ b/source/web/app/components/project-contact/messages/messages.component.html
@@ -48,8 +48,8 @@
       </mat-chip-list>
 
     </div>
-    <span class="mat-h4">{{contact.title}}</span>
-    <span class="mat-card-subtitle"><em>{{contact.message}}</em></span>
+    <span align="justify" class="mat-h4">{{contact.title}}</span>
+    <span align="justify" class="mat-card-subtitle"><em>{{contact.message}}</em></span>
   </div>
 
   <div class="message">
@@ -59,7 +59,7 @@
           <span>{{message.creationDate| date:'dd/MM/yyyy - HH:mm' }}</span>
         </mat-card-subtitle>
         <mat-card-content>
-          <span>{{message.text}}</span>
+          <span align="justify">{{message.text}}</span>
         </mat-card-content>
       </mat-card>
     </div>
