--- a/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
+++ b/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
@@ -81,7 +81,7 @@
       {{contactItem.messages[0].creationDate | date:'dd/MM/yyyy - HH:mm' }} |
       {{contactItem.messages[0].sender}}
     </span>
-      <span class="mat-body-2">{{contactItem.messages[0].text}}</span>
+      <span align="justify" class="mat-body-2">{{contactItem.messages[0].text}}</span>
     </div>
   </div>
 
