--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -5,10 +5,7 @@
     background-color: #f3f3f3;
     grid-template-columns: 9.5fr .5fr;
     grid-template-rows: 1fr .1fr 3fr 3fr 3fr;
-    grid-template-areas:
-    "title solicitation"
-    "formContact formContact"
-    "historic historic"
+    grid-template-areas: "title solicitation" "formContact formContact" "historic historic"
   }
 
   .title {
@@ -86,15 +83,16 @@
   <mat-card class="card-form-contact" *ngIf="!viewCallFormState">
     <mat-card-subtitle>Instruções de Uso</mat-card-subtitle>
     <mat-card-content>
-      <p><i>Caso esteja acessando este módulo pela primeira vez, e precise contactar-se com o projeto para informar
+      <p align="justify"><i>Caso esteja acessando este módulo pela primeira vez, e precise contactar-se com o projeto para informar
         alguma anomalia do sistema ou simplesmente tentar solucionar uma dúvida,
         clique no botão "criar chamado" para acessar o formulário de solicitação.
       </i></p>
 
-      <p><i>Caso queira somente ver a respostas dos especialistas em relação aos chamados criados, vá para
-        a seção de histórico e expanda um ou mais titulos.</i>
-        obs: Se necessário tirar mais dúvidas sobre a solução enviada, crie feedbacks com mais detalhes ou sugestões
-      </p>
+      <p align="justify"><i>Caso queira somente ver a respostas dos especialistas em relação aos chamados criados, vá para
+        a seção de histórico e expanda um ou mais titulos.</i></p>
+        <p align="justify">Se necessário tirar mais dúvidas sobre a solução enviada, crie uma nova mensagem com mais detalhes ou sugestões.
+        Em "ver +" atualize-se sobre a conversa com todas as mensagens do mesmo chamado.</p>
+
     </mat-card-content>
     <mat-card-actions class="btn-form-row">
       <button mat-button mat-raised-button color="primary" (click)="changeViewCallFormState()">ABRIR CHAMADO</button>
@@ -144,7 +142,7 @@
             <span class="mat-card-subtitle">{{contact.title}}</span>
           </mat-panel-title>
         </mat-expansion-panel-header>
-          <otus-project-contact-item #ProjectContactItem [contactItem]="contact"></otus-project-contact-item>
+        <otus-project-contact-item #ProjectContactItem [contactItem]="contact"></otus-project-contact-item>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
