--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -44,6 +44,10 @@
     justify-content: space-between
   }
 
+  .msg-empty-contacts {
+    text-align: center;
+  }
+
   .btn-form-row {
     display: flex;
     flex-direction: row-reverse;
@@ -131,7 +135,14 @@
   </mat-card>
   <div class="historic">
     <mat-card-subtitle class="history-subtitle">Histórico</mat-card-subtitle>
-    <mat-accordion *ngFor="let contact of projectContacts">
+    <div class="contactItem" *ngIf="networkLoading">
+      <otus-spinner></otus-spinner>
+    </div>
+    <div class="contactItem msg-empty-contacts" *ngIf="!networkLoading && isEmptyProjectContacts">
+      Nenhum contato encontrado
+    </div>
+    <div  *ngIf="!networkLoading && !isEmptyProjectContacts">
+    <mat-accordion  *ngFor="let contact of projectContacts">
       <mat-expansion-panel class="contactItem" (opened)="ProjectContactItem.loadContactItemContent(contact)">
         <mat-expansion-panel-header>
           <mat-panel-title class="historic-panel-title">
@@ -142,11 +153,10 @@
             <span class="mat-card-subtitle">{{contact.title}}</span>
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <otus-project-contact-item #ProjectContactItem
-                                   [contactItem]="contact">
-
+        <otus-project-contact-item #ProjectContactItem [contactItem]="contact">
         </otus-project-contact-item>
       </mat-expansion-panel>
     </mat-accordion>
+    </div>
   </div>
 </section>
