--- a/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
+++ b/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
@@ -29,7 +29,11 @@
     display: flex;
     flex-direction: column;
     margin: 20px 0px;
+  }
 
+  .msg-empty-message {
+    text-align: center;
+    padding: 10px;
   }
 
   .message {
@@ -62,7 +66,7 @@
   <div class="info">
     <span class="mat-body-2 creation-date">{{contactItem.creationDate | date: 'dd/MM/yyyy - HH:mm'}}</span>
     <mat-chip-list aria-label="more info" class="more-info">
-      <mat-chip (click)="goToMessages(contactItem)">ver +</mat-chip>
+      <mat-chip *ngIf="!isEmptyMessages" (click)="goToMessages(contactItem)">ver +</mat-chip>
     </mat-chip-list>
   </div>
   <span class="mat-h4 main-message">{{contactItem.message}}
@@ -70,11 +74,15 @@
   </span>
   <div>
     <mat-divider></mat-divider>
-    <div class="last-message-spinner" *ngIf="loadingLastMessage">
+    <div class="last-message-spinner" *ngIf="networkLoading">
       <otus-spinner></otus-spinner>
     </div>
 
-    <div class="last-message" *ngIf="!loadingLastMessage">
+    <div class="contactItem msg-empty-message" *ngIf="!networkLoading && isEmptyMessages">
+      Em breve responderemos o seu contato.
+    </div>
+
+    <div class="last-message" *ngIf="!networkLoading && !isEmptyMessages">
     <span class="mat-card-subtitle">Última mensagem |
       {{contactItem.messages[contactItem.messages.length - 1].creationDate | date:'dd/MM/yyyy - HH:mm' }} |
       {{contactItem.messages[contactItem.messages.length - 1].sender}}
