--- a/source/web/app/components/dashboard/tasks/tasks.component.html
+++ b/source/web/app/components/dashboard/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 ﻿<div fxLayout="row" fxLayoutAlign="center center" fxFlex>
-  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <otus-spinner *ngIf="isLoading"></otus-spinner>
   <div *ngIf="!isLoading && !eventListNotFound" fxLayout="column" fxLayoutGap="5px" fxLayoutGap.gt-xs="5px" fxFlex fxFlex.gt-xs="80">
     <events-component *ngFor="let item of participantEvents" [event]="this.eventList[item.objectType]" [data]="item">
     </events-component>
