AP-6 ajuste na tela e refatorações

--- a/source/web/app/components/project-contact/create-message-form/create-message-form/create-message-form.component.html
+++ b/source/web/app/components/project-contact/create-message-form/create-message-form/create-message-form.component.html
@@ -24,7 +24,7 @@
 <div class="mat-body-2">
     <span class="message-btn">
        <button class="message-btn" *ngIf="!viewMessageFormState" mat-button mat-raised color="primary"
-               (click)="changeViewMessageFormState()">MENSAGEM
+               (click)="changeViewMessageFormState()">RESPONDER
        </button>
     </span>
 
