--- a/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
+++ b/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
@@ -2,7 +2,7 @@
   .pci-layout {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: .1fr .1fr 1fr .1fr;
+    grid-template-rows: .1fr .1fr .5fr .1fr;
     grid-template-areas: "info" "mainMessage" "lastMessage" "message"
   }
 
@@ -39,22 +39,6 @@
   .message {
     grid-area: message;
   }
-
-  /*.message-btn {*/
-  /*  display: flex;*/
-  /*  flex-direction: row-reverse;*/
-  /*}*/
-
-  /*.message-form {*/
-  /*  display: flex;*/
-  /*  flex-direction: column;*/
-  /*  flex-grow: 1;*/
-  /*}*/
-
-  /*.btn-message-form {*/
-  /*  display: flex;*/
-  /*  flex-direction: row-reverse;*/
-  /*}*/
 
   .mat-icon-button {
     margin-left: 20px;
