--- a/source/web/app/shared/components/fields/input-text/input-text.component.html
+++ b/source/web/app/shared/components/fields/input-text/input-text.component.html
@@ -5,9 +5,15 @@
            [placeholder]="placeholder"
            [name]="controlName"
            [formControlName]="controlName">
-    <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl,'required')">Campo obrigatório</mat-error>
-    <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl, 'minlength')">valor mínimo de caracteres:  {{fieldValidator.lengthValidate(formControl, 'minlength')}}</mat-error>
-    <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl, 'maxlength')">valor máximo de caracteres: {{fieldValidator.lengthValidate(formControl, 'maxlength')}}</mat-error>
+    <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl,'required')">
+      {{sharedComponentValues.validator.required}}
+    </mat-error>
+    <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl, 'minlength')">
+      {{sharedComponentValues.validator.minlength}} {{fieldValidator.lengthValidate(formControl, 'minlength')}}
+    </mat-error>
+    <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl, 'maxlength')">
+      {{sharedComponentValues.validator.maxlength}} {{fieldValidator.lengthValidate(formControl, 'maxlength')}}
+    </mat-error>
   </mat-form-field>
 </div>
 
